--- a/Styles/style.css
+++ b/Styles/style.css
@@ -342,7 +342,7 @@ header {
 }
 .top__nav ul {
   display: flex;
-  width: 100%;
+  width: 67%;
   height: 100%;
 }
 
@@ -354,7 +354,7 @@ header {
   font-size: 24px;
   font-weight: extra-light;
   font-family: poppins;
-  width: 151.81px !important;
+  width: 153.81px !important;
 }
 .top__nav__logo h3 {
   text-transform: capitalize;
@@ -383,6 +383,14 @@ header {
 }
 .hamburger .hamburger-inner::before {
   background-color: #fff !important;
+}
+
+.phone_contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  width: 140px !important;
 }
 
 .large_menu {
